# tailscale-dns-sync

./: Cargo.toml  LICENSE  README.md
src/: dns_sync.rs  main.rs  route53.rs
