[package]
name = "tailscale-dns-sync"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Paxton <marcus@paxmarc.io>"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
aws-config = "0.54.1"
aws-sdk-route53 = "0.24.0"
config = "0.13.3"
tailscale-api = "0.1.5"
tokio = { version = "1", features = ["full"] }
